--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     <h3>500+</h3>
                     <p>Free Workout Videos</p>
                 </div>
-                <img src="./images/images 2.png" alt="">
+                <img src="images/images2.png" alt="">
                 <div class="videoTutorial">
                     <!-- it will be flex and child will take position at left and right -->
                     <i class="fa-solid fa-play"></i>
