--- a/index.html
+++ b/index.html
@@ -152,8 +152,7 @@
             <div class="heading">
                 <!-- this heading div => for desktop Screen width will be 50% and for medium and small screen width will be 95% and Always margin: 0 auto; -->
                 <h2>BMI Calculator</h2>
-                <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a
-                    gym.</p>
+                <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</p>
             </div>
             <div class="BMI-chart-calculator">
                 <!-- it will be flex, for small screen child tags will be placed in top and bottom in parent tag and for medium and desktop screen child tags will be placed in right and left in parent tag and Width will be 100%-->
@@ -197,14 +196,16 @@
                         <input type="number" placeholder="Height/cm">
                         <input type="number" placeholder="Weight/kg">
                         <input type="number" placeholder="Age">
-                        <select name="" id="" placeholder="Sex">
+                        <select name="" id="">
                             <!-- here placeholder should be work -->
+                            <option value="Male">Sex</option>
                             <option value="Male">Male</option>
                             <option value="Female">Female</option>
                         </select>
-                        <select name="" id="" placeholder="Select an activity factor">
+                        <select name="" id="activityFactor" placeholder="Select an activity factor">
                             <!-- here placeholder should be work -->
-                            <option value="1.2" selected="">Sedentary (office job)</option>
+                            <option value="Select an activity factor" selected="">Select an activity factor</option>
+                            <option value="1.2" >Sedentary (office job)</option>
                             <option value="1.375">Light Exercise (1-2 days/week)</option>
                             <option value="1.55">Moderate Exercise (3-5 days/week)</option>
                             <option value="1.725">Heavy Exercise (6-7 days/week)</option>
