--- a/index.html
+++ b/index.html
@@ -12,13 +12,10 @@
 
 <body>
     <header>
-        <!-- Header Position is Fixed at top all time  and dont take space for this header it will show on other contents and backcround will be transparent.-->
         <div class="logo">Fitness BD</div>
         <nav>
             <i class="fas fa-bars"></i>
-            <!--this i tag will Hide For Medium & desktop Screen & Show For Small Screen -->
             <ul>
-                <!--this ul tag will Show For Medium & desktop Screen & Hide For Small Screen -->
                 <li>Home</li>
                 <li>Service</li>
                 <li>Contact</li>
@@ -28,7 +25,6 @@
     </header>
     <main>
         <section class="intro">
-            <!-- it will be flex and for desktop screen child will take position at left and right and for medium and small screen child will be take position at top and bottom in the intro section and its width is 100%-->
             <div class="texts">
                 <h1>Get body in<br><span>shape</span> & stay<br>healthy</h1>
                 <p>A huge selection of health and fitness content, healthy recipes and transformation stories to help
@@ -45,7 +41,6 @@
                 </div>
                 <img src="images/images2.png" alt="">
                 <div class="videoTutorial">
-                    <!-- it will be flex and child will take position at left and right -->
                     <i class="fa-solid fa-play"></i>
                     <div class="text">
                         <h3>300+</h3>
@@ -55,16 +50,11 @@
             </div>
         </section>
         <section class="changeYourHabits">
-            <!-- this changeYourHabits section for desktop and medium Screen width will be 80% and for small screen width will be 90% and Always margin: 0 auto; -->
             <div class="heading">
-                <!-- this heading div will be take 100% of width and text align center -->
                 <h2>Change Your Habits</h2>
-                <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a
-                    gym.</p>
+                <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</p>
             </div>
             <div class="content">
-                <!-- this content div will be flex / grid , childs for small screen placed in 1 column and 4 row, for medium screen 2 column and 2 row, for desktop screen 4 column and 1 row -->
-                <!-- for childs => img tag should be circle and align center in parent div, h3 & p tags should be text-align:center in parent div,  -->
                 <div class="movement">
                     <img src="images/image 3.png" alt="">
                     <h3>Movement</h3>
@@ -88,76 +78,55 @@
             </div>
         </section>
         <section class="runExtraMile">
-            <!-- this runExtraMile section => for desktop Screen width will be 80% and for medium and small screen width will be 95% and Always margin: 0 auto; and border-radius: 1.125rem; and for desktop and medium screen Childs Will be space between left and right -->
-            <!-- it will be flex, for small screen child tags will be placed in top and bottom in parent tag and for medium and desktop screen child tags will be placed in right and left in parent tag  -->
             <div class="text">
-                <!-- for dekstop screen this text div width will be 50% of the parent-->
                 <h2>Run an Extra<br>Mile Easily</h2>
-                <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a
-                    gym. With hundreds of professional workouts.</p>
+                <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym. With hundreds of professional workouts.</p>
                 <button>Join Now</button>
             </div>
             <img src="./images/run.jpg" alt="">
-            <!-- for dekstop screen this img tag width will be 50% of the parent and border-radius: 1.125rem; -->
         </section>
         <section class="trainingsAndExcercises">
-            <!-- this trainingsAndExcercises section => for desktop Screen width will be 80% and for medium and small screen width will be 95% and Always margin: 0 auto; -->
             <div class="heading">
                 <h2>Trainings and Exercises</h2>
-                <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a
-                    gym.</p>
+                <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</p>
             </div>
             <div class="images">
                 <div class="row1">
-                    <!-- this row1 div will be flex row  -->
                     <div class="excercise1">
                         <h5>Lorem Ipsum</h5>
-                        <!-- this h5 tag will be placed on the image and take position at left-bottom corner -->
                         <img src="images/exercise1.jpg" alt="">
                     </div>
                     <div class="excercise2">
                         <h5>Lorem Ipsum</h5>
-                        <!-- this h5 tag will be placed on the image and take position at top-left corner -->
                         <img src="images/exercise2.png" alt="">
                     </div>
                     <div class="excercise3">
-                        <!-- this excercise3 div will be Display none for small screen-->
                         <h5>Leg Press: Works the quadriceps and glutes</h5>
-                        <!-- this h5 tag will be placed on the image and take position at left-bottom corner -->
                         <img src="images/exercise3.png" alt="">
                     </div>
                 </div>
                 <div class="row2">
                     <div class="excercise4">
                         <h5>Leg Press: Works the quadriceps and glutes</h5>
-                        <!-- this h5 tag will be placed on the image and take position at top-right corner -->
                         <img src="images/exercise4.png" alt="">
                     </div>
                     <div class="excercise5">
                         <h5>Leg Press: Works the quadriceps and glutes</h5>
-                        <!-- this h5 tag will be placed on the image and take position at left-bottom corner -->
                         <img src="images/exercise5.jpg" alt="">
                     </div>
                     <div class="excercise6">
-                        <!-- this excercise6 div will be Display none for small screen-->
                         <h5>Leg Press: Works the quadriceps and glutes</h5>
-                        <!-- this h5 tag will be placed on the image and take position at left-bottom corner -->
                         <img src="images/exercise6.jpg" alt="">
                     </div>
                 </div>
             </div>
         </section>
         <section class="BMI-Calculator">
-            <!-- this BMI-Calculator section width will be 100% -->
             <div class="heading">
-                <!-- this heading div => for desktop Screen width will be 50% and for medium and small screen width will be 95% and Always margin: 0 auto; -->
                 <h2>BMI Calculator</h2>
-                <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</p>
             </div>
             <div class="BMI-chart-calculator">
-                <!-- it will be flex, for small screen child tags will be placed in top and bottom in parent tag and for medium and desktop screen child tags will be placed in right and left in parent tag and Width will be 100%-->
                 <div class="chart">
-                    <!-- width will be 30% of parent and margin 0 auto-->
                     <h3>BMI Calculator Chart</h3>
                     <table>
                         <thead>
@@ -187,23 +156,19 @@
                     </table>
                 </div>
                 <div class="calculator">
-                    <!-- width will be 40% of parent and margin: 0 auto;-->
                     <h3>Calculate your BMI</h3>
                     <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or access
                         to a gym. </p>
                     <form id="BMICalculator">
-                        <!--Height/cm, Weight/kg, Age, Sex width will be 50% of the parent but Select an activity factor width will be 100% of the parent -->
                         <input type="number" placeholder="Height/cm">
                         <input type="number" placeholder="Weight/kg">
                         <input type="number" placeholder="Age">
                         <select name="" id="">
-                            <!-- here placeholder should be work -->
                             <option value="Male">Sex</option>
                             <option value="Male">Male</option>
                             <option value="Female">Female</option>
                         </select>
                         <select name="" id="activityFactor" placeholder="Select an activity factor">
-                            <!-- here placeholder should be work -->
                             <option value="Select an activity factor" selected="">Select an activity factor</option>
                             <option value="1.2" >Sedentary (office job)</option>
                             <option value="1.375">Light Exercise (1-2 days/week)</option>
@@ -217,17 +182,11 @@
             </div>
         </section>
         <section class="ourTeam">
-            <!-- this ourTeam section for desktop Screen width will be 80% and for small screen width will be 90% and Always margin: 0 auto; -->
             <div class="heading">
-                <!-- For this div text-align: center; -->
                 <h2>Meet Our Team</h2>
-                <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a
-                    gym.</p>
+                <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</p>
             </div>
             <div>
-                <!--for this div => border-radius: 1.125rem; & background: rgba(255, 255, 255, 0.10) and if desktop screen then this div width will be 80% of parent, if medium screen then this div width will be 90% of parent, if small screen then this div width will be 96% of parent, and Always margin: 0 auto; -->
-                <!-- here is total 6 element, for desktop and medium screen the 6 element will show at 3 column and 2 row and for small screen the 6 element will show at 1 column and 6 row-->
-                <!-- Here in child divs for img tag z-index is -1 or make the img as a background of the div and placed the h5 and p tag on the image corner of left-bottom -->
                 <div>
                     <img src="images/trainer1.png" alt="">
                     <h5>Jerome Bell</h5>
@@ -261,14 +220,14 @@
             </div>
         </section>
     </main>
-    <footer> <!-- this footer tag width is 100% and background: rgba(255, 255, 255, 0.10); -->
-        <div class="border"> <!-- this border div width will be 80% of parent and for child element make it flex row space-between -->
+    <footer> 
+        <div class="border"> 
             <div class="footer">
-                <div class="text"> <!-- this div width will be 40% of parent -->
+                <div class="text">
                     <h1>Fitness BD</h1>
                     <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym. With hundreds of professional workouts.</p>
                 </div>
-                <div class="middle"><!-- this div width will be 20% of parent -->
+                <div class="middle">
                     <h3>Get Started</h3>
                     <ul>
                         <li>Service</li>
@@ -277,7 +236,7 @@
                         <li>About Us</li>
                     </ul>
                 </div>
-                <div class="right"> <!-- this div width will be 20% of parent -->
+                <div class="right">
                     <h3>Get Started</h3>
                     <ul>
                         <li>Fitness</li>
